maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: ';' expected but integer literal found.
  var Tx = Array[Int] 4
                      ^JediEscaper:4: error: ';' expected but integer literal found.
  var Ty = Array[Int] 4
                      ^